--- a/app/src/main/res/layout/medical_history.xml
+++ b/app/src/main/res/layout/medical_history.xml
@@ -17,6 +17,42 @@
         android:scrollbarStyle="insideOverlay"
         android:scrollbars="vertical" >
 
+         <TableRow
+             android:id="@+id/tableRow10"
+             android:layout_width="wrap_content"
+             android:background="#000000"
+             android:layout_height="wrap_content" >
+
+             <TextView
+                 android:id="@+id/textView10"
+                 android:layout_width="wrap_content"
+                 android:layout_height="wrap_content"
+                 android:text="History of Presenting Complaint"
+                 android:textAppearance="?android:attr/textAppearanceMedium"
+                 android:textColor="#ffffff"
+                 android:textSize="32dp"
+                 android:textStyle="bold"
+                 android:typeface="normal" />
+
+         </TableRow>
+
+         <TableRow
+             android:id="@+id/tableRow12"
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content" >
+
+             <EditText
+                 android:id="@+id/medical_history_presenting_complaint"
+                 android:layout_width="wrap_content"
+                 android:layout_height="wrap_content"
+                 android:ems="10"
+                 android:inputType="textMultiLine"
+                 android:lines="3"
+                 android:minLines="3" >
+             </EditText>
+
+         </TableRow>
+
           <TableRow
             android:id="@+id/tableRow0"
             android:layout_width="wrap_content"
@@ -24,10 +60,10 @@
             android:layout_height="wrap_content" >
 
               <TextView
-                  android:id="@+id/textView11"
+                  android:id="@+id/textView1"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
-                  android:text="Medical History"
+                  android:text="Medical Conditions"
                   android:textAppearance="?android:attr/textAppearanceMedium"
                   android:textColor="#ffffff"
                   android:textSize="32dp"
@@ -35,6 +71,8 @@
                   android:typeface="normal" />
       
         </TableRow>
+
+
         
         <TableRow
             android:id="@+id/tableRow1"
@@ -104,6 +142,8 @@
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="Respiratory" />
+
+
                  </LinearLayout>
 
              </LinearLayout>
@@ -139,15 +179,56 @@
             </LinearLayout>
 
         </TableRow>
+
+         <TableRow
+             android:id="@+id/tableRow15"
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content" >
+
+             <RelativeLayout
+                 android:layout_width="match_parent"
+                 android:layout_height="wrap_content" >
+
+                 <TextView
+                     android:id="@+id/textView14"
+                     android:layout_width="wrap_content"
+                     android:layout_height="wrap_content"
+                     android:text="FAST Test"
+                     android:textSize="18dp"
+                     android:textStyle="bold"
+                     android:textAppearance="?android:attr/textAppearanceMedium" />
+
+                 <RadioGroup
+                     android:id="@+id/medical_history_fast"
+                     android:layout_width="wrap_content"
+                     android:layout_height="wrap_content"
+                     android:layout_below="@id/textView14"
+                     android:orientation="horizontal" >
+
+                     <RadioButton
+                         android:id="@+id/medical_history_fast_yes"
+                         android:layout_width="wrap_content"
+                         android:layout_height="wrap_content"
+                         android:checked="false"
+                         android:text="Positive" />
+
+                     <RadioButton
+                         android:id="@+id/medical_history_fast_no"
+                         android:layout_width="wrap_content"
+                         android:layout_height="wrap_content"
+                         android:text="Negative" />
+                 </RadioGroup>
+             </RelativeLayout>
+         </TableRow>
         
           <TableRow
-            android:id="@+id/tableRow4"
+            android:id="@+id/tableRow8"
             android:layout_width="wrap_content"
             android:background="#000000"
             android:layout_height="wrap_content" >
 
               <TextView
-                  android:id="@+id/textView11"
+                  android:id="@+id/textView7"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="Known allergies"
@@ -160,7 +241,7 @@
         </TableRow>
 
         <TableRow
-            android:id="@+id/tableRow5"
+            android:id="@+id/tableRow6"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" >
 
@@ -175,8 +256,8 @@
             </EditText>
 
         </TableRow>
-        
-        
+
+
           <TableRow
             android:id="@+id/tableRow4"
             android:layout_width="wrap_content"
