--- a/app/src/main/res/layout/observation_actual.xml
+++ b/app/src/main/res/layout/observation_actual.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical" >
 
       <TableRow
-            android:id="@+id/tableRow13"
+            android:id="@+id/tableRow15"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="#000000" >
@@ -34,7 +34,7 @@
         android:orientation="horizontal" >
 
            <TextView
-               android:id="@+id/textView1"
+               android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="100dp"
@@ -96,39 +96,38 @@
                     android:id="@+id/textView2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginRight="20dp"
-                    android:text="Respiratory Rate"
+                    android:layout_marginRight="10dp"
+                    android:width="150dp"
+                    android:text="Respiratory Rate &amp; character"
                     android:textAppearance="?android:attr/textAppearanceMedium" />
 
                 <EditText
                     android:id="@+id/observation_respiratory_rate"
-                    android:layout_width="80dp"
+                    android:layout_width="100dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginRight="40dp"
+                    android:layout_marginRight="20dp"
                     android:layout_toRightOf="@id/textView2"
                     android:layout_weight="1"
                     android:ems="10"
-                    android:inputType="number"
-                    android:width="80dp" />
+                    android:width="100dp" />
 
                 <TextView
                     android:id="@+id/textView3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginRight="20dp"
+                    android:layout_marginRight="10dp"
                     android:layout_toRightOf="@id/observation_respiratory_rate"
-                    android:text="Pulse Rate"
+                    android:width="100dp"
+                    android:text="Pulse Rate &amp; character"
                     android:textAppearance="?android:attr/textAppearanceMedium" />
 
                 <EditText
-                    android:id="@+id/observation_pule_rate"
-                    android:layout_width="80dp"
+                    android:id="@+id/observation_pulse_rate"
+                    android:layout_width="140dp"
+                    android:layout_toRightOf="@+id/textView3"
                     android:layout_height="wrap_content"
-                    android:layout_toRightOf="@id/textView3"
-                    android:layout_weight="1"
                     android:ems="10"
-                    android:inputType="number"
-                    android:width="80dp" >
+                    android:width="140dp" >
 
                 </EditText>
             </RelativeLayout>
@@ -158,38 +157,27 @@
                     android:text="Pain Score"
                     android:textAppearance="?android:attr/textAppearanceMedium" />
 
-                <RadioGroup
-                    android:id="@+id/observation_pain_score"
+                <SeekBar
+                    android:id="@+id/observation_painscore"
+                    android:layout_width="300dp"
+                    android:layout_height="40dp"
+
+                    android:layout_toRightOf="@+id/textView4"
+                    android:layout_gravity="center_horizontal"
+                    android:adjustViewBounds="true"
+                    android:max="10"
+                    android:progress="0"
+                    android:indeterminate="false" />
+                <TextView
+                    android:id="@+id/observation_painscore_value"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_toRightOf="@id/textView4"
-                    android:orientation="horizontal" >
+                    android:layout_marginLeft="24dp"
+                    android:textSize="32dp"
+                    android:layout_toRightOf="@+id/observation_painscore"
+                    android:text="0"
+                    android:textAppearance="?android:attr/textAppearanceMedium" />
 
-                    <RadioButton
-                        android:id="@+id/observation_pain_score_0"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:checked="true"
-                        android:text="0" />
-
-                    <RadioButton
-                        android:id="@+id/observation_pain_score_1"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="1" />
-
-                    <RadioButton
-                        android:id="@+id/observation_pain_score_2"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="2" />
-
-                    <RadioButton
-                        android:id="@+id/observation_pain_score_3"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="3" />
-                </RadioGroup>
             </RelativeLayout>
 
         </TableRow>
@@ -228,47 +216,6 @@
             android:id="@+id/tableRow5"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" >
-
-             <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-                <TextView
-                    android:id="@+id/textView6"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginRight="20dp"
-                    android:text="Oxygen (LPM)"
-                    android:textAppearance="?android:attr/textAppearanceMedium" />
-
-                <EditText
-                    android:id="@+id/observation_oxygen"
-                    android:layout_width="80dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginRight="40dp"
-                    android:layout_toRightOf="@id/textView6"
-                    android:ems="10"
-                    android:inputType="number"
-                    android:width="80dp" />
-
-                <TextView
-                    android:id="@+id/textView7"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginRight="20dp"
-                    android:layout_toRightOf="@id/observation_oxygen"
-                    android:text="Entonox"
-                    android:textAppearance="?android:attr/textAppearanceMedium" />
-
-                <EditText
-                    android:id="@+id/observation_entonox"
-                    android:layout_width="130dp"
-                    android:layout_height="wrap_content"
-                    android:layout_toRightOf="@id/textView7"
-                    android:ems="10"
-                    android:width="80dp" />
-
-            </RelativeLayout>
 
         </TableRow>
 
@@ -346,24 +293,8 @@
                 android:ems="10"
                 android:inputType="numberDecimal"
                 android:width="80dp" />
-            
-            <TextView
-                android:id="@+id/textView10"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginRight="20dp"
-                android:layout_toRightOf="@id/observation_temperature"
-                android:text="Blood Sugar"
-                android:textAppearance="?android:attr/textAppearanceMedium" />
 
-            <EditText
-                android:id="@+id/observation_blood_sugar"
-                android:layout_toRightOf="@id/textView10"
-                android:layout_width="80dp"
-                android:width="80dp"
-                android:layout_height="wrap_content"
-                android:ems="10"/>
-            </RelativeLayout>
+                </RelativeLayout>
         </TableRow>
 
       
@@ -374,22 +305,17 @@
             android:layout_height="wrap_content" >
     	<LinearLayout
         	android:layout_width="match_parent"
-        	android:layout_height="wrap_content" >
+        	android:layout_height="wrap_content"
+            android:weightSum="1">
 
             <TextView
                 android:id="@+id/textView11"
                 android:layout_width="250dp"
                 android:layout_height="wrap_content"
-                android:text="Left Pupils reactive? (Y/N)"
-                android:textAppearance="?android:attr/textAppearanceMedium" />
-
-            <TextView
-                android:id="@+id/textView11"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Right Pupil reactive? (Y/N)"
-                android:textAppearance="?android:attr/textAppearanceMedium" />
-            </LinearLayout>
+                android:text="PERL (pupils equal reactive to light)"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:layout_weight="0.74" />
+        </LinearLayout>
 
         </TableRow>
 
@@ -403,77 +329,72 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" >
 
-                <CheckBox
-                    android:id="@+id/observation_pupils_reactive_left_yes"
-                    android:layout_width="80dp"
+                <RadioGroup
+                    android:id="@+id/observation_perl"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:paddingBottom="10dp" >
+
+                <RadioButton
+                    android:id="@+id/observation_perl_yes"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:checked="false"
                     android:text="Yes" />
 
-                <CheckBox
-                    android:id="@+id/observation_pupils_reactive_left_no"
-                    android:layout_width="80dp"
+                <RadioButton
+                    android:id="@+id/observation_perl_no"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginRight="50dp"
-                    android:layout_toRightOf="@id/observation_pupils_reactive_left_yes"
                     android:text="No" />
 
-                <CheckBox
-                    android:id="@+id/observation_pupils_reactive_right_yes"
-                    android:layout_width="80dp"
-                    android:layout_height="wrap_content"
-                    android:layout_toRightOf="@id/observation_pupils_reactive_left_no"
-                    android:text="Yes" />
+                </RadioGroup>
 
-                <CheckBox
-                    android:id="@+id/observation_pupils_reactive_right_no"
-                    android:layout_width="80dp"
-                    android:layout_height="wrap_content"
-                    android:layout_toRightOf="@id/observation_pupils_reactive_right_yes"
-                    android:text="No" />
 
             </RelativeLayout>
 
         </TableRow>
 
-          <TableRow
-            android:id="@+id/tableRow11"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
-                 <TextView
-                android:id="@+id/textView12"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Pupil Size (L/R)"
-                android:textAppearance="?android:attr/textAppearanceMedium" />
-              </TableRow>
-        
-        
-        <TableRow
-            android:id="@+id/tableRow11"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
+    <TableRow
+    android:id="@+id/tableRow16"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content" >
 
-                <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
-       
-            <Spinner
-                android:id="@+id/observation_pupil_size_left"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginRight="20dp"
-                android:layout_weight="1"
-                android:entries="@array/pupil_size_options" />
+    <RadioGroup
+        android:id="@+id/observation_eye"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:paddingBottom="10dp" >
 
-            <Spinner
-                android:id="@+id/observation_pupil_size_right"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:entries="@array/pupil_size_options"
-                android:prompt="@array/pupil_size_options" />
-            </LinearLayout>
-            
-        </TableRow>
+        <RadioButton
+            android:id="@+id/observation_eye_normal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:checked="false"
+            android:text="Normal" />
+
+        <RadioButton
+            android:id="@+id/observation_eye_constricted"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Constricted" />
+        <RadioButton
+            android:id="@+id/observation_eye_unequal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Unequal" />
+
+        <RadioButton
+            android:id="@+id/observation_eye_dilated"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Dilated"
+            android:checked="false" />
+
+
+    </RadioGroup>
+</TableRow>
 
 </TableLayout>
