--- a/app/src/main/res/layout/treatment.xml
+++ b/app/src/main/res/layout/treatment.xml
@@ -9,6 +9,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
 
+
+
+
         <TableLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content" >
@@ -26,37 +29,34 @@
                     android:textAppearance="?android:attr/textAppearanceMedium" />
             </TableRow>
 
-            <TableRow
-                android:id="@+id/tableRow1"
+
+            <EditText
+                android:id="@+id/treatment_other"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" >
-
-                <EditText
-                    android:id="@+id/treatment_other"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:ems="10"
-                    android:inputType="textMultiLine"
-                    android:lines="4"
-                    android:minLines="4" />
-            </TableRow>
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:width="400dp"
+                android:inputType="textMultiLine"
+                android:lines="10"
+                android:minLines="6" />
 
             <TableRow
-                android:id="@+id/tableRow1"
+                android:id="@+id/tableRow11"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" >
 
                 <CheckBox
-                    android:id="@+id/treatment_none"
+                    android:id="@+id/treatment_wound_cleansed"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="No Treatment Required" />
+                    android:text="Wound Cleansed" />
 
                 <CheckBox
-                    android:id="@+id/treatment_airway_opened"
+                    android:id="@+id/treatment_wound_dressed"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Airway Opened" />
+                    android:text="Wound Dressed" />
+
 
             </TableRow>
 
@@ -72,17 +72,20 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" >
 
-                <CheckBox
-                    android:id="@+id/treatment_airway_suctioned"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Airway Suctioned" />
+
 
                 <CheckBox
-                    android:id="@+id/checkBox4"
+                    android:id="@+id/treatment_none"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Airway Inserted" />
+                    android:text="No Treatment Required" />
+
+
+                <CheckBox
+                    android:id="@+id/treatment_rice"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Rest Ice Comfort Elevate" />
 
             </TableRow>
 
@@ -91,17 +94,18 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" >
 
-                <CheckBox
-                    android:id="@+id/treatment_wound_cleansed"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Wound Cleansed" />
+
+
 
                 <CheckBox
-                    android:id="@+id/treatment_recovery_position"
+                    android:id="@+id/treatment_adhesive_dressing"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Recovery Position" />
+                    android:text="Adhesive Dressing" />
+
+
+
+
 
             </TableRow>
 
@@ -110,38 +114,19 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" >
 
-                <CheckBox
-                    android:id="@+id/treatment_adhesive_dressing"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Adhesive Dressing" />
+
+
 
                 <CheckBox
-                    android:id="@+id/treatment_wound_dressed"
+                    android:id="@+id/treatment_recovery_position"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Wound Dressed" />
+                    android:text="Recovery Position" />
+
+
 
             </TableRow>
 
-            <TableRow
-                android:id="@+id/tableRow6"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" >
-
-                <CheckBox
-                    android:id="@+id/checkBox2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Fracture supported" />
-
-                <CheckBox
-                    android:id="@+id/treatment_cervical_spine_control"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Cervical Spine Control" />
-
-            </TableRow>
 
          
 
@@ -150,11 +135,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" >
 
-                <CheckBox
-                    android:id="@+id/treatment_rice"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Rest Ice Comfort Elevate" />
 
                 <CheckBox
                     android:id="@+id/treatment_sling"
@@ -162,75 +142,15 @@
                     android:layout_height="wrap_content"
                     android:text="Sling" />
 
-            </TableRow>
-
-            <TableRow
-                android:id="@+id/tableRow12"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" >
-            </TableRow>
-
-            <TableRow
-                android:id="@+id/tableRow12"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" >
-
                 <CheckBox
                     android:id="@+id/treatment_splint"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Splint" />
 
-                <CheckBox
-                    android:id="@+id/treatment_aspirin"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Aspirin" />
-
             </TableRow>
 
-            <TableRow
-                android:id="@+id/tableRow12"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" >
-            </TableRow>
 
-            <TableRow
-                android:id="@+id/tableRow12"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" >
-
-                <CheckBox
-                    android:id="@+id/treatment_ibuprofen"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Ibuprofen" />
-
-                <CheckBox
-                    android:id="@+id/treatment_loratadine"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Loratadine" />
-
-            </TableRow>
-
-            <TableRow
-                android:id="@+id/tableRow12"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" >
-            </TableRow>
-
-            <TableRow
-                android:id="@+id/tableRow12"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" >
-
-                <CheckBox
-                    android:id="@+id/treatment_paraceatomol"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Paraceatomol" />
-            </TableRow>
         </TableLayout>
 
     </ScrollView>
