Majority of CRUD written but dates are not being properly saved and recalled from the DB. In addition, the current viewFragment is not being written to memory when save is pressed as was thought

--- a/app/src/main/res/layout/incident.xml
+++ b/app/src/main/res/layout/incident.xml
@@ -142,7 +142,8 @@
                 android:layout_marginLeft="30dp"
                 android:layout_toRightOf="@id/textView4"
                 android:ems="10"
-                android:inputType="textPersonName" />
+                android:inputType="textPersonName"
+                android:capitalize="words" />
 
             </RelativeLayout>
         </TableRow>
@@ -173,7 +174,8 @@
                     android:inputType="textPersonName"
                     android:layout_alignParentTop="true"
                     android:layout_toRightOf="@+id/textView3"
-                    android:layout_marginLeft="51dp" />
+                    android:layout_marginLeft="51dp"
+                    android:capitalize="words" />
 
             </RelativeLayout>
         </TableRow>
