--- a/app/src/main/res/layout/signature.xml
+++ b/app/src/main/res/layout/signature.xml
@@ -45,7 +45,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:ems="10"
-                android:inputType="textPersonName" >
+                android:inputType="textPersonName"
+               android:capitalize="words">
 
             
             </EditText>
