--- a/app/src/main/res/layout/prf.xml
+++ b/app/src/main/res/layout/prf.xml
@@ -29,7 +29,7 @@ android:layout_height="?android:attr/listPreferredItemHeight"
 				 android:id="@+id/prf_activity_save"
 				 android:layout_width="wrap_content"
 				 android:layout_height="match_parent"
-				 android:text="Save"
+				 android:text="Postpone"
 				 android:layout_toRightOf="@+id/textView11"
 				 android:textSize="18sp" />
 
